media/transmission/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: transmission
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: transmission
          image: haugene/transmission-openvpn:5.0.2
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
          ports:
            - name: http
              containerPort: 9091
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
      volumes:
        - name: config
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/media/transmission
        - name: data
          nfs:
            server: hactar.lan
            path: /mnt/tank/server/media/data
