media/transmission/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: transmission
spec:
  selector:
    app: transmission
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
